<resources>
    <string name="app_name">HPM</string>
    <string name="Geslo">Geslo</string>
    <string name="ProsimVpišiteUI">Prosim vpišite uporabniško ime</string>
    <string name="ProsimVpisitePWD">Prosim vpišite vaše geslo</string>
    <string name="PoljaSoPrazna">Polja so prazna!</string>
    <string name="NeuspesnaPrijava">Prijava neuspešna, Prosim poizkusite ponovno!</string>
    <string name="NapakPriVpisu">Napaka!</string>
    <string name="UspesnoPrijavljeni">Uspešno prijavljen!</string>
    <string name="NapakPriPrijavi">Napaka pri prijavi!</string>
    <string name="Uspesno">Uspešno!</string>
    <string name="Neuspesno">Neuspešno!</string>
    <string name="dobrodo_li_v_aplikaciji_hpm">Dobrodošli v aplikaciji HPM!</string>
    <string name="valueOfTok1">---------------------------------------</string>
    <string name="tok_1">TOK 1:</string>
    <string name="tok_2">TOK 2:</string>
    <string name="valueOfTok2">---------------------------------------</string>
    <string name="valueOfTok3">---------------------------------------</string>
    <string name="tok_3">TOK 3:</string>
    <string name="text_progress_bar_center">Mesec</string>
    <string name="text_progress_bar_right">Teden</string>
    <string name="text_progress_bar_left">Dan</string>
    <string name="trenutna_poraba">0.0€</string>
    <string name="menu_moj_racun">Moj račun</string>
    <string name="menu_nastavitve">Nastavitve</string>
    <string name="menu_splosno">Splošno</string>
    <string name="menu_naprava">Naprava</string>
    <string name="menu_pomoc">Pomoč</string>
    <string name="menu_o_nas">O nas</string>
    <string name="menu_search">Search</string>
    <string name="isci_description">Išči na strani</string>
    <string name="nasvet1">S pogrevanjem in kuhanjem manjših količin hrane v mikrovalovni pečici namesto v navadni, prihranimo do 70% električne energije</string>
    <string name="nasvet2">Če peremo,..</string>
    <string name="nasvet3">Če,..</string>
    <string name="nasvet4">Če..</string>
    <string name="naslov_nasveta1">01</string>
    <string name="klimatskeNaprave">Klimatska naprava</string>
    <string name="grelnikVode">Grelnik vode</string>
    <string name="televizija">TV</string>
    <string name="hladilnik">Hladilnik</string>
    <string name="osvetljava">Osvetljava</string>
    <string name="racunalnik">Računalnik</string>
    <string name="miSmoTuZaVas">Tukaj smo za vas</string>
    <string name="najboljEnergijskoPotratniAparati">Najbolj energijsko potratni aparati</string>
    <string name="content_oF_miSmoTuZaVas">Potrebujete pogovor, imate kljub uporabi storitve težave z rednim plačevanjem mesečnih stroškov?</string>
    <string name="content_oF_miSmoTuZaVas_spodnji_del">Mi smo tu za vas. Kadarkoli potrebujete, lahko pokličete spodnjo številko, ali pa nas kontaktirate kar preko aplikacije.</string>
    <string name="pogovor_z_nami">Pogovor z nami</string>
    <string name="telefonska_stevilka">041 589 693</string>
    <string name="napisi_sporocilo">Napiši sporočilo</string>
    <string name="bojler">Bojler</string>
    <string name="pralni_stroj">Pralni stroj</string>
    <string name="pomivalni_stroj">Pomivalni stroj</string>
    <string name="likalnik">Likalnik</string>
    <string name="valueOfKlimatskaNaprava">24€</string>
    <string name="valueOfPralniStroj">18€</string>
    <string name="valueOfHladilnik">9€</string>
    <string name="valueOfPomivalniStroj">15€</string>
    <string name="telefon">Telefon</string>
    <string name="valueOfOstvetljava">6€</string>
    <string name="valueOfLikalnik">4€</string>
    <string name="napoved">Predvidena mesečna poraba v €</string>
    <string name="scan_qr">Login with QR code</string>
    <string name="menu_najboljPotratniAparati_odstrani_aparat">Odstrani aparat</string>
    <string name="menu_najboljPotratniAparati_dodaj_aparat">Dodaj aparat</string>
    <string name="menu_potratni_aparati_dodaj_napravo">Dodan aparat</string>
    <string name="menu_potratni_aparati_odstrani_napravo">Odstranjen aparat</string>
    <string name="vrednostNapovediNaSrediniProgressBara">0€</string>
    <string name="naslov_tv_nasveti">Nasveti</string>
    <string name="menu_odjava">Odjava</string>
    <string name="vrednostNapovedovanjaLevoOdikone">0€</string>
    <string name="tvPorabaNapovedovanje">Poraba je ista</string>
    <string name="brisi">#F62B2B</string>
    <string name="brisi2">#3DE329</string>
    <string name="valueOfRacunalnika">0€</string>
    <string name="racuni">Računi</string>
    <string name="mesec_row_racuni">Ime meseca</string>
    <string name="racun">Račun.pdf</string>
    <string name="api_level">Api level</string>
    <string name="cena_racuna_row_racuni">35,86€</string>
    <string name="datum_zapadlosti">Zapadlost: 6.04.2020</string>
    <string name="razlenjen_racun">Razčlenjen račun.pdf</string>
    <string name="racuni_desno_puscica">Računi</string>
    <string name="ze_placano">(Že plačano)</string>
</resources>
